--- a/Weather WebApp/style.css
+++ b/Weather WebApp/style.css
@@ -22,7 +22,7 @@
 h1 {
     text-align: center;
     text-transform:uppercase;
-    padding-top: 30px;
+    padding-top: 10px;
     word-spacing: 1rem;
 }
 
@@ -30,7 +30,7 @@ h1 {
     width:90%;
     max-width: 550px;
     margin: 0 auto;
-    margin-top: 4rem;
+    margin-top: 1rem;
     display: flex;
     justify-content: space-between;
 }
@@ -216,13 +216,13 @@ h1 {
 
 .form-container{
     display: none;
-    width:90%;
-    max-width:550px;
+    width:100%;
+    max-width:400px;
     margin:0 auto;
     justify-content: center;
     align-items: center;
     gap: 0 10px; 
-    margin-bottom: 3rem;
+    margin-top: 1rem;
 }
 
 .form-container.active{
@@ -258,29 +258,30 @@ h1 {
 }
 
 .credits a {
-    position: absolute;
-    bottom: 15px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 20px;
-    color: #aaa;
+	position: absolute;
+	bottom: 5px;
+	left: 50%;
+	transform: translateX(-50%);
+	font-size: 25px;
+	color:  white;
 }
 .credits span {
-    color: #db0933;
+	color: rgb(237, 89, 30);
 }
-  
-@media (max-width: 1199px) {
-  
-    .credits a {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 19px;
-      color: #aaa;
-    }
-    .credits span {
-      color: red;
-    }
+
+@media (max-width: 1199px){
+	
+	.credits a {
+		position: absolute;
+		bottom: 20px;
+		left: 50%;
+		transform: translateX(-50%);
+		font-size: 19px;
+		color: white;
+	}
+	.credits span {
+		color:  rgb(237, 89, 30);
+	}
 }
+
   
