--- a/Weather WebApp/style.css
+++ b/Weather WebApp/style.css
@@ -276,12 +276,36 @@ h1 {
 		bottom: 20px;
 		left: 50%;
 		transform: translateX(-50%);
-		font-size: 19px;
+		font-size: 15px;
 		color: white;
 	}
 	.credits span {
 		color:  rgb(237, 89, 30);
 	}
+
+    .tab-container {
+        width:90%;
+        max-width: 550px;
+        margin: 0 auto;
+        margin-top: 1rem;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .tab{
+        cursor: pointer;
+        font-size: 1.5rem;
+        letter-spacing: 0px;
+        padding: 0px 0px;
+        border-radius: 4px;
+        background-color: rgba(219, 226, 239, 0.5); 
+    
+    }
+
+    .form-container{
+        max-width:350px;
+       
+    }
 }
 
   
